--- a/test.ipynb
+++ b/test.ipynb
@@ -2,13 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def f(x,y,z):\n",
+    "    a=1\n",
+    "    b=2\n",
+    "    c=3\n",
     "    return (x+y)/z\n",
     "a=5\n",
     "b=6\n",
@@ -19,9 +22,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -30,13 +34,28 @@
        "1.4666666666666666"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "def th\n",
+    "def calling_things():\n",
+    "    works_fine()\n",
+    "    throws_an_exception()"
    ]
   },
   {
